[CHANGE] remove footer, add page spacing, fix for row height

--- a/components-ui/Navigation.module.css
+++ b/components-ui/Navigation.module.css
@@ -35,7 +35,7 @@
 }
 
 @media screen and (max-width: 450px) {
-  .navLinkWrapper a img {
-    margin-right: 0px;
+  .navLinkWrapper svg {
+    margin-right: 0px !important;
   }
 }
