--- a/views/data/dataTable.module.css
+++ b/views/data/dataTable.module.css
@@ -2,7 +2,7 @@
   width: 1380px;
   box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.05);
   border-radius: 8px;
-  margin-bottom: 18px;
+  margin-bottom: 80px;
   -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
   -moz-animation: fadein 2s; /* Firefox < 16 */
   -ms-animation: fadein 2s; /* Internet Explorer */
@@ -11,32 +11,52 @@
 }
 
 @keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Firefox < 16 */
 @-moz-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Internet Explorer */
 @-ms-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 /* Opera < 12.1 */
 @-o-keyframes fadein {
-  from { opacity: 0; }
-  to   { opacity: 1; }
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 @keyframes spinner {
   0% {
@@ -52,21 +72,22 @@
   margin-right: auto;
   width: 50px;
   height: 50px;
-  border: 10px solid #FAFAF9; /* Light grey */
-  border-top: 10px solid #78716C; /* Black */
+  border: 10px solid #fafaf9; /* Light grey */
+  border-top: 10px solid #78716c; /* Black */
   border-radius: 50%;
+  margin-top: 30px;
   animation: spinner 1.5s linear infinite;
 }
 
 .statDropdownWrapper {
-   display: flex;
-   align-items: center;
-   white-space: nowrap;
-   width: 250px;
-   margin-left: auto;
-   margin-bottom: 12px;
-   z-index: 100;
- }
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  width: 250px;
+  margin-left: auto;
+  margin-bottom: 12px;
+  z-index: 100;
+}
 
 .tableHeaderRow {
   padding: 14px 8px;
@@ -79,7 +100,7 @@
   width: 100%;
   top: -0.5px;
   z-index: 1;
-  height: 40px;
+  height: 42px;
 }
 
 .tableBodyInnerWrapper {
@@ -110,6 +131,10 @@
   font-weight: 400;
   vertical-align: middle;
   height: 40px;
+}
+
+.bodyItem :last-of-type {
+  border-bottom: none !important;
 }
 
 .bodyItem td {
@@ -201,22 +226,22 @@
   height: 8px;
   margin-right: 4px;
   border-radius: 50%;
-  background-color: #7C3AED;
+  background-color: #7c3aed;
 }
 
 .statusBadge .active-state {
-  background-color: #EDE9FE;
-  color: #7C3AED;
+  background-color: #ede9fe;
+  color: #7c3aed;
 }
 
 .statusBadge .inactive {
-  background-color: #F5F5F4;
-  color: #57534E;
+  background-color: #f5f5f4;
+  color: #57534e;
 }
 
 .statusBadge .overdue {
-  background-color: #FEF3C7;
-  color: #D97706;
+  background-color: #fef3c7;
+  color: #d97706;
 }
 
 @media screen and (max-width: 767px) {
@@ -265,5 +290,4 @@
   .heroMobileRemove {
     display: none;
   }
-
 }
